--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Tu nombre</h1>
-            <div><a href="mailto:tucorreol@ejemplo.com">tucorreo@ejemplo.com</a></div>
+            <h1>phenix26</h1>
+            <div><a href="benjamincolimae@gmail.com">tucorreo@ejemplo.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,7 +21,7 @@
                     Redes sociales
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<ingresa_user>">Red social: @tu-usuario</a></li>
+                    <li><a href="https://intagram.com/<@phenixluster>">Red social: @tu-usuario</a></li>
                     <li><a href="https://linkedin.com/in/<ingresa_user>">Red social: @tu-usuario</a></li>
                 </ul>    
             </section>
